use npm start.. only front end changes added

--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -7,7 +7,8 @@
                     ngModel
                     required
                     minlength="3"
-                    #title="ngModel">
+                    #title="ngModel"
+                    placeholder="Post Title">
                     <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
                 </mat-form-field>
                 <mat-form-field>
@@ -16,7 +17,8 @@
                     rows="5"
                     ngModel
                     required
-                    #content="ngModel"></textarea>
+                    #content="ngModel"
+                    placeholder="Post Content"></textarea>
                     <mat-error *ngIf="content.invalid">Please enter some content.</mat-error>
                 </mat-form-field>
                 <button mat-raised-button color="warn" type="submit">Submit</button>
