--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -4,6 +4,11 @@
       {{post.title}}
     </mat-expansion-panel-header>
       {{post.content}}
+      <mat-action-row>
+        <button mat-button color="primary">EDIT</button>
+        <button mat-button color="warn">Delete</button>
+      </mat-action-row>
     </mat-expansion-panel>
+   
 </mat-accordion>
 <p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts added yet!</p>
